<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MineChat</string>

    <!--  Activity Main  -->
    <string name="activity_main_drawer_servers">Servers</string>
    <string name="activity_main_drawer_plugins">Plugins</string>
    <string name="activity_main_drawer_scripts">Scripts</string>
    <string name="activity_main_drawer_accounts">Accounts</string>
    <string name="activity_main_drawer_settings">Settings</string>
    <string name="activity_main_error_load_plugins_title">Fail to load plugins</string>
    <string name="activity_main_error_load_plugins_ioexception">%s\n\nThis error may occur due to:\n1. Probabilistic trigger, restart the software\n2. There are (sub)folders in the "plugin" directory or files other than the plug-in itself</string>
    <string name="activity_main_permissions_request_dialog_title">Permission request</string>
    <string name="activity_main_permissions_request_dialog_content">Requires some permissions to run properly</string>
    <string name="activity_main_permissions_request_dialog_ok">OK</string>
    <string name="activity_main_permissions_request_dialog_cancel">Cancel &amp; Exit</string>

    <!--  Fragment Server  -->
    <string name="fragment_server_empty">The server has not been added yet</string>
    <string name="fragment_server_add">Add a server</string>
    <string name="fragment_server_add_dialog_content">Please select a protocol provider</string>
    <string name="fragment_server_info_dialog_title">Information</string>
    <string name="fragment_server_info_dialog_content">Internal ID: %s</string>
    <string name="fragment_server_info_dialog_protocol">Check the protocol provider</string>
    <string name="fragment_server_info_dialog_clear_hist">CLEAR CHAT HISTORIES</string>
    <string name="fragment_server_delete_dialog_title">Delete?</string>
    <string name="fragment_server_delete_dialog_content">You are about to delete: %s. It will be gone for a long time!</string>
    <string name="fragment_server_delete_dialog_no">Cancel</string>
    <string name="fragment_server_delete_dialog_yes">DELETE</string>

    <!--  Fragment Plugin  -->
    <string name="fragment_plugin_protocol">Protocol</string>
    <string name="fragment_plugin_extension">Extension</string>
    <string name="fragment_plugin_service">Service</string>
    <string name="fragment_plugin_priority_dialog_title">Priority</string>
    <string name="fragment_plugin_priority_dialog_content">Priority</string>

    <!--  Fragment Script  -->

    <!--  Fragment Account  -->
    <string name="fragment_account_empty">The account has not been added yet</string>
    <string name="fragment_account_default">[Default]</string>
    <string name="fragment_account_add">Add a account</string>
    <string name="fragment_account_add_dialog_title">Title</string>
    <string name="fragment_account_add_dialog_username">Username</string>
    <string name="fragment_account_add_dialog_offline">offline mode</string>
    <string name="fragment_account_edit_dialog_set_default">Set as the default</string>
    <string name="fragment_account_delete_dialog_title">Delete?</string>
    <string name="fragment_account_delete_dialog_content">You are about to delete: %s. It will be gone for a long time!</string>
    <string name="fragment_account_delete_dialog_no">Cancel</string>
    <string name="fragment_account_delete_dialog_yes">DELETE</string>

    <!--  Fragment Setting  -->
    <string name="fragment_setting_basic_settings">Basic settings</string>
    <string name="fragment_setting_check_for_updates_automatically_title">Check for updates automatically</string>
    <string name="fragment_setting_check_for_updates_automatically_summary">Check for updates from GitHub Releases when the application starts</string>
    <string name="fragment_setting_language_title">Language</string>
    <string name="fragment_setting_language_summary">Supporting too many languages will be cumbersome XP</string>
    <string name="fragment_setting_chat_floating_window_title">Chat floating window</string>
    <string name="fragment_setting_chat_floating_window_summary">When the server is connected, the software will display a chat floating window when it enters the background</string>
    <string name="fragment_setting_bedrock_edition_settings">Bedrock Edition Settings</string>
    <string name="fragment_setting_set_up_bedrock_resource_pack_title">Set up resource pack</string>
    <string name="fragment_setting_set_up_bedrock_resource_pack_summary">Used for the best experience</string>
    <string name="fragment_setting_set_up_bedrock_resource_pack_dialog_title">Set up resource pack</string>
    <string name="fragment_setting_set_up_bedrock_resource_pack_dialog_content">You need to configure the resource bundle to get full support for the Bedrock Edition feature.\n\nYou can manually place the resource package in \n%s ,\n\nor click the button below, which will extract the resource pack from the Minecraft program in your phone and configure it. (Requires you to have the Minecraft app installed on your phone)</string>
    <string name="fragment_setting_set_up_bedrock_resource_pack_dialog_action">Extract the resource pack</string>

    <string name="fragment_setting_about">About</string>

    <!--  Activity Chat  -->
    <string name="activity_chat_connect">Connect</string>
    <string name="activity_chat_exit">Close &amp; Exit</string>
    <string name="activity_chat_setting_title">Session settings</string>
    <string name="activity_chat_setting_message_size">Message text size</string>
    <string name="activity_chat_setting_auto_reconnect">Auto reconnect</string>
    <string name="activity_chat_close_dialog_title">Close</string>
    <string name="activity_chat_close_dialog_action">Back</string>
    <string name="activity_chat_error_dialog_title">Close with an error</string>
    <string name="activity_chat_error_dialog_back">Back</string>
    <string name="activity_chat_error_dialog_stack">Review the call stack</string>
    <string name="activity_chat_history_load">Loading chat history</string>
    <string name="activity_chat_history_loaded">The chat history is loaded</string>

</resources>