<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#101010"
    tools:context=".activity.chat.ChatActivity">

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/dialog_bottom"
        app:layout_constraintBottom_toBottomOf="parent">
        <vip.cdms.mcoreui.view.button.TextButton
            android:id="@+id/client_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:style="purple"
            app:bold="true"
            android:text="@string/activity_chat_connect"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/client_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <vip.cdms.mcoreui.view.input.EditText
                android:id="@+id/edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/button_send"/>
            <vip.cdms.mcoreui.view.button.TextButton
                android:id="@+id/button_send"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/appbar_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E7E8EC"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/appbar">
        <LinearLayout
            android:id="@+id/appbar_more_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_width="100dp"
                android:layout_height="300dp"/>
        </LinearLayout>
    </ScrollView>

    <vip.cdms.mcoreui.view.another.Appbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/icon_back"
        app:collapseIcon="@drawable/icon_small_setting"
        app:title="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"/>

<!--    <HorizontalScrollView-->
<!--        android:id="@+id/extensions_scroll_view"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="-1dp"-->
<!--        android:background="@drawable/list_background"-->
<!--        android:clipToPadding="false"-->
<!--        android:padding="8dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/appbar">-->
<!--        <LinearLayout-->
<!--            android:id="@+id/extensions"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="horizontal">-->
<!--            <vip.cdms.mcoreui.view.show.ImageView-->
<!--                android:id="@+id/protocol_server"-->
<!--                android:layout_width="34dp"-->
<!--                android:layout_height="34dp"-->
<!--                android:src="@drawable/icon_plugin"/>-->
<!--            <LinearLayout-->
<!--                android:layout_width="2dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_marginTop="2dp"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:background="#88ffffff"/>-->
<!--        </LinearLayout>-->
<!--    </HorizontalScrollView>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1e1e1f"
        app:layout_constraintTop_toTopOf="@id/recycler_view"
        app:layout_constraintLeft_toLeftOf="@id/recycler_view"
        app:layout_constraintRight_toRightOf="@id/recycler_view"
        app:layout_constraintBottom_toBottomOf="@id/recycler_view">
        <ImageView
            android:id="@+id/app_silhouette"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:alpha="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/appbar_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:layout_marginTop="-1dp"
        app:layout_constraintTop_toBottomOf="@id/appbar"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_bottom_line"
        app:layout_constraintBottom_toTopOf="@id/bottom"/>

    <LinearLayout
        android:id="@+id/sidebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:background="#55000000"
        android:clipChildren="false"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone">
        <vip.cdms.mcoreui.view.show.TextView
            android:id="@+id/sidebar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:gravity="center"
            android:background="#55000000" />
        <LinearLayout
            android:id="@+id/sidebar_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="false"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom">
        <vip.cdms.mcoreui.view.show.TextView
            android:id="@+id/title_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:clickable="false"
            android:background="@drawable/round_black_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/title_subtitle"
            app:layout_constraintVertical_chainStyle="packed"
            android:alpha="0"/>
        <vip.cdms.mcoreui.view.show.TextView
            android:id="@+id/title_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:clickable="false"
            android:background="@drawable/round_black_background"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/title_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:alpha="0"/>

        <vip.cdms.mcoreui.view.show.TextView
            android:id="@+id/title_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#ff66b2"
            android:clickable="false"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/title_popup"
            app:layout_constraintVertical_chainStyle="packed"
            android:alpha="0"/>
        <vip.cdms.mcoreui.view.show.TextView
            android:id="@+id/title_actionbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:clickable="false"
            android:background="@drawable/round_black_background"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/title_popup"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:alpha="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pause_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aa000000"
        android:clickable="true"
        android:visibility="gone"
        android:alpha="0">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:scrollbarStyle="outsideOverlay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@drawable/list_player_background"
                    android:orientation="vertical">
                    <vip.cdms.mcoreui.view.show.TextView
                        android:id="@+id/pause_menu_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginBottom="8dp"
                        android:text="..."
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                    <LinearLayout
                        android:id="@+id/pause_menu_players"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
<!--                        <include-->
<!--                            layout="@layout/layout_list_player"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content" />-->
<!--                        <include-->
<!--                            layout="@layout/layout_list_player"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginTop="-2dp" />-->
                    </LinearLayout>
                </LinearLayout>

                <include
                    android:id="@+id/provider_button"
                    layout="@layout/layout_image_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"/>
                <LinearLayout
                    android:id="@+id/extensions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>

                <vip.cdms.mcoreui.view.button.TextButton
                    android:id="@+id/pause_menu_exit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/activity_chat_exit"
                    app:style="red"/>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:clipToPadding="false"-->
<!--        android:paddingTop="32dp">-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="16dp"-->
<!--            android:layout_marginRight="16dp">-->
<!--            <vip.cdms.mcoreui.view.button.TextButton-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="awa"/>-->
<!--        </LinearLayout>-->
<!--    </ScrollView>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/dialog_background"
        android:visibility="gone"
        android:alpha="0">
        <ImageView
            android:id="@+id/loading_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/loading_content"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:id="@+id/loading_content"
            android:layout_width="150dp"
            android:layout_height="84dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/loading_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <View
                android:layout_width="250dp"
                android:layout_height="2dp"
                android:background="#fff" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/loading_recycler_view"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:scrollbarSize="0dp" />
            <View
                android:layout_width="250dp"
                android:layout_height="2dp"
                android:background="#fff" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>